--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-designer-svgedit",
-  "version": "1.0.27",
+  "name": "react-designer",
+  "version": "1.0.28",
   "description": "Easy to configure, lightweight, editable vector graphics in your react components.",
   "main": "./build/index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/abhi-govula/react-designer"
+    "url": "https://github.com/abhishek-syook/react-designer"
   },
   "keywords": [
     "react",
@@ -20,7 +20,15 @@
   ],
   "author": "F",
   "license": "MIT",
-  "homepage": "https://github.com/abhi-govula/react-designer",
+  "homepage": "https://github.com/abhishek-syook/react-designer",
+  "dependencies": {
+    "babel-cli": "^6.5.1",
+    "classnames": "^2.2.1",
+    "lodash": "^4.17.4",
+    "radium": "^0.19.6",
+    "react-hotkeys": "^0.10.0",
+    "react-portal": "^4.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-eslint": "^8.0.3",
@@ -33,29 +41,18 @@
     "css-loader": "^0.28.7",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.5",
+    "react": "^17.0.2",
+    "react-autocomplete": "1.7.2",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^4.2.3",
     "react-hot-loader": "^3.1.3",
     "rimraf": "^2.3.4",
     "style-loader": "^0.19.0",
+    "superagent": "*",
     "svg-inline-loader": "^0.8.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "webfontloader": "^1.6.24",
-    "react-autocomplete": "1.7.2",
-    "react-dropzone": "^4.2.3",
-    "superagent": "*"
-  },
-  "peerDependencies": {},
-  "dependencies": {
-    "babel-cli": "^6.5.1",
-    "classnames": "^2.2.1",
-    "lodash": "^4.17.4",
-    "radium": "^0.19.6",
-    "react": "^16.2.0",
-    "react-color": "^2.13.8",
-    "react-hotkeys": "^0.10.0",
-    "react-portal": "^4.0.0"
+    "webpack": "^3.9.1",
+    "webpack-dev-server": "^2.9.5"
   }
 }
